# cdl_civicrm_analyse

./: .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  contacts.csv  pyproject.toml
.github/workflows/: mdbook.yml
ansible/: playbook.yml
ansible/group_vars/: group_vars.yml  unmanaged.yml
ansible/tasks/: deploy_caddy.yml  deploy_civicrm.yml
civicrm-test-instanz/: ansible.cfg
civicrm-test-instanz/ansible/: hosts
civicrm-test-instanz/test_data/: .env-template  contributions.csv
doc/: .gitignore  README.md  STYLEGUIDE.md  book.toml  datengrundlage.md
doc/adds/: custom.css  tags.js
doc/src/: 0-einfuehrung.md  1-datenlebenszyklus.md  1-wie-lesen.md  2-datenlebenszyklus.md  3-ueber.md  4-fazit.md  5-fazit.md  5-ueber.md  6-ergebnisse-umfrage.md  SUMMARY.md  Vorwort.md  datenlebenszyklus.md  einfuehrung.md  komponenten.md  lizenz.md  ueber.md
iac/: README.md
iac/opentofu/: .terraform.lock.hcl  variables.tf
kestra_flows/: civicrm_api_to_warehouse_polars.yaml
libreoffice/: README.md  analysis.ods  download_searches.sh  geschlecht_statistik.csv
notebooks/: api_example.ipynb
opentofu/: main.tf  meta.tf  variables.tf
opentofu/templates/: group_vars.tftpl  hosts.tftpl  user_data.tftpl
sql/: create_donor_type_table.sql
supporting_code/google-apps-script/: fetchSavedSearch.js  runAllSearches.js
supporting_code/kestra_flows/: civicrm_api_count.yaml  civicrm_count_to_warehouse.yml  civicrm_sql_count.yaml  (+1 more)
test_data/: Makefile  contacts.csv  contacts_updated_20250908_123525.csv  gen_contacts.py  gen_contributions.py  update_contacts.py
(+153 files in other folders)
